--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "AnimatorControl.sln"
+    "dotnet.defaultSolution": "C3_Lab1_318.sln"
 }
